--- a/style.css
+++ b/style.css
@@ -56,3 +56,9 @@ a {
     text-decoration: none;
     font-size: 24px;
 }
+
+.container {
+    padding: 32px;
+    display: flex;
+    flex-wrap: wrap;
+}
